<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_verification_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/element_spacing_normal"
            android:paddingVertical="@dimen/content_padding_normal"
            android:text="@string/document_verification_title_document_verification"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- ID Number -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_document_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding_normal"
            android:layout_marginVertical="@dimen/element_spacing_normal"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_document">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_document_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/document_verification_hint_document_number"
                android:imeOptions="actionNext"
                android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--  First Name  -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding_normal"
            android:layout_marginVertical="@dimen/element_spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_document_number">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/document_verification_hint_first_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding_normal"
            android:layout_marginVertical="@dimen/element_spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_first_name">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/document_verification_hint_last_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Gender -->
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding_normal"
            android:layout_marginVertical="@dimen/element_spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_last_name">

        <AutoCompleteTextView
                android:id="@+id/input_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:hint="@string/document_verification_hint_gender"
                android:imeOptions="actionNone"
                android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Birthday -->
    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding_normal"
            android:layout_marginVertical="@dimen/element_spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_gender">

        <LinearLayout
                android:id="@+id/view_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/content_padding_normal"
                android:paddingVertical="@dimen/content_padding_normal"
                tools:ignore="UseCompoundDrawables">

            <TextView
                    android:id="@+id/tv_birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/document_verification_hint_birthday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageView
                    android:id="@+id/iv_front_uploaded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:contentDescription="@null"
                    android:gravity="center_vertical|end"
                    android:src="@drawable/ic_chevron_right"
                    app:tint="?android:colorPrimary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
            android:id="@+id/view_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/content_padding_normal"
            android:layout_marginTop="@dimen/content_padding_normal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/element_spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_birthday">

        <io.falu.identity.ui.LoadingButton
                android:id="@+id/button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/button_continue" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>